--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-md-7">
                         <div class="banner-home__content p-relative" >
                             <h6 class="sub-title mb-20 mb-sm-10 mb-xs-5 wow fadeInLeft animated" data-wow-delay="0.5s">Welcome To Sulekh Laser</h6>
-                            <h1 class="title mb-15 mb-xs-10 wow fadeInLeft animated" data-wow-delay="1.2s">Your Trusted Partner in Quality Printing</h1>
+                            <h1 class="title mb-15 mb-xs-10 wow fadeInLeft animated" data-wow-delay="1.2s">Powering Your Brand Through Print</h1>
                             <div class="description mb-20 mb-sm-15 mb-xs-10 wow fadeInLeft animated" data-wow-delay="1.4s">
                                 <p>At Sulekh Laser, we combine craftsmanship with cutting-edge laser technology to deliver custom-designed products and high-quality printing solutions. From concept to creation, we ensure every detail reflects perfection and purpose.</p>
                             </div>
@@ -257,11 +257,11 @@
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 ">
                     <div class="latest-feature__item mb-30 d-flex wow fadeInLeft animated" data-wow-delay="1.6s">
-                        <div class="latest-feature__item-icon call-center">
+                        <div class="latest-feature__item-icon call-center"> 
                             <img src="assets/imgs/feature/delivery_icon.png" alt="img not fount">
                         </div>
                         <div class="latest-feature__item-content">
-                            <h4>Fast Delivery Service</h4>
+                            <h4>Fast Delivery Services</h4>
                             <p>Fast, reliable delivery with consistent turnaround—your prints arrive on time, every time.</p>
                             <a href="#">Read More <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
@@ -292,7 +292,7 @@
                     <h4>Years</h4>
                 </div>
                 <div class="description">
-                    <p>Of experience in printing service</p>
+                    <p>Of experience in printing services</p>
                 </div>
             </div>
             <div class="row">
@@ -364,7 +364,7 @@
                             <img src="assets/imgs/service/service1.svg" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Printing Services</h4></a>
+                            <a href="#"><h4>Printing Services</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>We offer quality pamphlets, bill books, and vinyl sticker printings for all types of needs.</p>
@@ -374,10 +374,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="latest-service__item text-center wow fadeInLeft animated" data-wow-delay="1.2s">
                         <div class="latest-service__item-icon">
-                            <img src="assets/imgs/service/service2.svg" alt="img not found">
+                            <img src="assets/imgs/service/Envelop_icon.png" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Envelope Printings</h4></a>
+                            <a href="#"><h4>Envelope Printings</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>Expert printing of printed, white, rectangular, and X-ray paper envelopes for every purpose.</p>
@@ -387,10 +387,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="latest-service__item text-center wow fadeInLeft animated" data-wow-delay="1.4s">
                         <div class="latest-service__item-icon">
-                            <img src="assets/imgs/service/service3.svg" alt="img not found">
+                            <img src="assets/imgs/service/Pamphlet_icon.png" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Pamphlet Printings</h4></a>
+                            <a href="#"><h4>Pamphlet Printings</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>Providing pamphlet, offset book, leaflet, and flyer printing services for varied requirements.</p>
@@ -400,10 +400,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="latest-service__item text-center wow fadeInRight animated" data-wow-delay="1.2s">
                         <div class="latest-service__item-icon service-4">
-                            <img src="assets/imgs/service/service4.svg" alt="img not found">
+                            <img src="assets/imgs/service/Cards_icon.png" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Calenders & Greeting Cards</h4></a>
+                            <a href="#"><h4>Calenders & Greeting Cards</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>Offering multicolor label sticker, thank you card, welcome card, and wall calendar printing services.</p>
@@ -413,10 +413,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="latest-service__item text-center wow fadeInRight animated" data-wow-delay="1.4s">
                         <div class="latest-service__item-icon">
-                            <img src="assets/imgs/service/service5.svg" alt="img not found">
+                            <img src="assets/imgs/service/Books_icon.png" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Books/Attendance Register Printings</h4></a>
+                            <a href="#"><h4>Books/Attendance Register Printings</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>Offering printing services for visiting cards, books, school attendance registers, and hospital patient files.</p>
@@ -426,10 +426,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="latest-service__item text-center wow fadeInRight animated" data-wow-delay="1.6s">
                         <div class="latest-service__item-icon">
-                            <img src="assets/imgs/service/service6.svg" alt="img not found">
+                            <img src="assets/imgs/service/Catalogue_icon.png" alt="img not found">
                         </div>
                         <div class="latest-service__item-title">
-                            <a href="service-details.html"><h4>Catalog and Brochure Printings</h4></a>
+                            <a href="#"><h4>Catalog and Brochure Printings</h4></a>
                         </div>
                         <div class="latest-service__item-text">
                             <p>Providing printing services for digital posters, brochures, and product catalogs.</p>
@@ -740,36 +740,36 @@
                                     <div class="card wow fadeInLeft animated" data-wow-delay="1s">
                                         <div class="card-header">
                                             <button class="card-link" data-bs-toggle="collapse" data-bs-target="#faq-1">
-                                                Appropriate For Your Specific Business
+                                                1. What types of printing services do you offer ?
                                             </button>
                                         </div>
                                         <div id="faq-1" class="collapse" data-bs-parent="#faq">
                                             <div class="card-body">
-                                                <p>The other hand we denounce with righteou indg ation and dislike men who are so beguiled and demorali ed by the of pleasure of the moment. Dislike men who are so beguiled demoraliz worlds.</p>
+                                                <p>We provide a wide variety of services including pamphlets, vinyl stickers, bill-books, greeting cards, envelopes (printed, X-ray, rectangular), visiting cards, and more to suit all business and personal needs.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card wow fadeInLeft animated" data-wow-delay="1.2s">
                                         <div class="card-header">
                                             <button class="card-link" data-bs-toggle="collapse" data-bs-target="#faq-2">
-                                                Design & Development Troubleshooting
+                                                2. Do you offer customization for designs and sizes ?
                                             </button>
                                         </div>
                                         <div id="faq-2" class="collapse" data-bs-parent="#faq">
                                             <div class="card-body">
-                                                <p>The other hand we denounce with righteou indg ation and dislike men who are so beguiled and demorali ed by the of pleasure of the moment. Dislike men who are so beguiled demoraliz worlds.</p>
+                                                <p>Absolutely! We specialize in tailored printing—custom sizes, materials, finishing options, and designs to perfectly match your brand requirements.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card wow fadeInLeft animated" data-wow-delay="1.4s">
                                         <div class="card-header">
                                             <button class="card-link" data-bs-toggle="collapse" data-bs-target="#faq-3">
-                                                Online Support & Action
+                                                Can you handle both small and bulk orders?
                                             </button>
                                         </div>
                                         <div id="faq-3" class="collapse" data-bs-parent="#faq">
                                             <div class="card-body">
-                                                <p>The other hand we denounce with righteou indg ation and dislike men who are so beguiled and demorali ed by the of pleasure of the moment. Dislike men who are so beguiled demoraliz worlds.</p>
+                                                <p>Yes, we efficiently cater to both individual and large-scale bulk printing needs, ensuring quality and speed for every order.</p>
                                             </div>
                                         </div>
                                     </div>
